--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <h3>Leave a comment</h3>
 
-    <form id="comment-form" action="">
+    <form id="comment-form" action="#" math ="post">
       <input type='text' name="comment" id="comment-input" cols="30" rows="10">
       </br>
       <button id='submit'>submit</button>
@@ -39,7 +39,7 @@
 
   </div>
 
-  <!-- <script src="js/index.min.js"></script> -->
-  <script src="js/challenge.js"></script>
+  <script src="js/index.min.js"></script>
+  <!-- <script src="js/challenge.js"></script> -->
 </body>
 </html>
